--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Stream</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -32,13 +32,13 @@
             <h2>Daftar Anime</h2>
             <div class="anime-grid">
                 <div class="anime-item">
-                    <img src="ryuko.jpg" alt="Anime 1">
+                    <img src="anime1.jpg" alt="Anime 1">
                     <h3>Anime 1</h3>
                     <p>Deskripsi singkat anime 1.</p>
                     <a href="anime1.html" class="btn">Tonton Sekarang</a>
                 </div>
                 <div class="anime-item">
-                    <img src="ojisan.jpg" alt="Anime 2">
+                    <img src="anime2.jpg" alt="Anime 2">
                     <h3>Anime 2</h3>
                     <p>Deskripsi singkat anime 2.</p>
                     <a href="anime2.html" class="btn">Tonton Sekarang</a>
