--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <h2>Daftar Anime</h2>
             <div class="anime-grid">
                 <div class="anime-item">
-                    <img src="anime1.jpg" alt="Anime 1">
+                    <img src="ryuko.jpg" alt="Anime 1">
                     <h3>Anime 1</h3>
                     <p>Deskripsi singkat anime 1.</p>
                     <a href="anime1.html" class="btn">Tonton Sekarang</a>
                 </div>
                 <div class="anime-item">
-                    <img src="anime2.jpg" alt="Anime 2">
+                    <img src="ojisan.jpg" alt="Anime 2">
                     <h3>Anime 2</h3>
                     <p>Deskripsi singkat anime 2.</p>
                     <a href="anime2.html" class="btn">Tonton Sekarang</a>
