--- a/index.html
+++ b/index.html
@@ -22,47 +22,39 @@
 
     <main>
         <section id="home" class="hero-section">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="hero-content">
-                            <h2>Selamat Datang di Anime Stream</h2>
-                            <p>Nonton anime favoritmu di sini!</p>
-                            <a href="#anime-list" class="btn">Lihat Daftar Anime</a>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="hero-content">
-                            <h2>Anime Terbaru</h2>
-                            <p>Nikmati anime terbaru dengan kualitas terbaik.</p>
-                            <a href="#anime-list" class="btn">Tonton Sekarang</a>
-                        </div>
-                    </div>
-                    <!-- Tambahkan slide lain jika diperlukan -->
-                </div>
-                <!-- Tambahkan navigasi jika diperlukan -->
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
+            <div class="hero-content">
+                <h2>Selamat Datang di Anime Stream</h2>
+                <p>Nonton anime favoritmu di sini!</p>
+                <a href="#anime-list" class="btn">Lihat Daftar Anime</a>
             </div>
         </section>
 
         <section id="anime-list" class="anime-section">
             <h2>Daftar Anime</h2>
-            <div class="anime-grid">
-                <div class="anime-item">
-                    <img src="ryuko.jpg" alt="Anime 1">
-                    <h3>Anime 1</h3>
-                    <p>Deskripsi singkat anime 1.</p>
-                    <a href="anime1.html" class="btn">Tonton Sekarang</a>
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="ryuko.jpg" alt="Anime 1">
+                            <h3>Anime 1</h3>
+                            <p>Deskripsi singkat anime 1.</p>
+                            <a href="anime1.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="ojisan.jpg" alt="Anime 2">
+                            <h3>Anime 2</h3>
+                            <p>Deskripsi singkat anime 2.</p>
+                            <a href="anime2.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <!-- Tambahkan lebih banyak slide anime sesuai kebutuhan -->
                 </div>
-                <div class="anime-item">
-                    <img src="ojisan.jpg" alt="Anime 2">
-                    <h3>Anime 2</h3>
-                    <p>Deskripsi singkat anime 2.</p>
-                    <a href="anime2.html" class="btn">Tonton Sekarang</a>
-                </div>
-                <!-- Tambahkan lebih banyak item anime sesuai kebutuhan -->
+                <!-- Tambahkan navigasi jika diperlukan -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </section>
 
@@ -101,6 +93,22 @@
                 el: '.swiper-pagination',
                 clickable: true,
             },
+            slidesPerView: 1,
+            spaceBetween: 10,
+            breakpoints: {
+                640: {
+                    slidesPerView: 2,
+                    spaceBetween: 20,
+                },
+                768: {
+                    slidesPerView: 3,
+                    spaceBetween: 30,
+                },
+                1024: {
+                    slidesPerView: 4,
+                    spaceBetween: 40,
+                },
+            }
         });
     </script>
 </body>
