--- a/index.html
+++ b/index.html
@@ -33,23 +33,95 @@
             <h2>Daftar Anime</h2>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
+                    <!-- Tambahkan lebih dari 10 slide anime -->
                     <div class="swiper-slide">
                         <div class="anime-item">
-                            <img src="ryuko.jpg" alt="Anime 1">
+                            <img src="anime1.jpg" alt="Anime 1">
                             <h3>Anime 1</h3>
                             <p>Deskripsi singkat anime 1.</p>
-                            <a href="anime1.html" class="btn">Tonton Sekarang</a>
+                            <a href="hsr.html" class="btn">Tonton Sekarang</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="anime-item">
-                            <img src="ojisan.jpg" alt="Anime 2">
+                            <img src="hsr 2.jpg" alt="Anime 2">
                             <h3>Anime 2</h3>
                             <p>Deskripsi singkat anime 2.</p>
                             <a href="anime2.html" class="btn">Tonton Sekarang</a>
                         </div>
                     </div>
-                    <!-- Tambahkan lebih banyak slide anime sesuai kebutuhan -->
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="arisu.jpg" alt="Anime 3">
+                            <h3>Anime 3</h3>
+                            <p>Deskripsi singkat anime 3.</p>
+                            <a href="anime3.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="momoi.jpg" alt="Anime 4">
+                            <h3>Anime 4</h3>
+                            <p>Deskripsi singkat anime 4.</p>
+                            <a href="anime4.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="midori.jpg" alt="Anime 5">
+                            <h3>Anime 5</h3>
+                            <p>Deskripsi singkat anime 5.</p>
+                            <a href="anime5.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="ojisan.jpg" alt="Anime 6">
+                            <h3>Anime 6</h3>
+                            <p>Deskripsi singkat anime 6.</p>
+                            <a href="anime6.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="blu 1.jpg" alt="Anime 7">
+                            <h3>Anime 7</h3>
+                            <p>Deskripsi singkat anime 7.</p>
+                            <a href="anime7.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="hsr.jpg" alt="Anime 8">
+                            <h3>Anime 8</h3>
+                            <p>Deskripsi singkat anime 8.</p>
+                            <a href="hsr.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="ryuko.jpg" alt="Anime 9">
+                            <h3>Anime 9</h3>
+                            <p>Deskripsi singkat anime 9.</p>
+                            <a href="anime9.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="gbf.jpg" alt="Anime 10">
+                            <h3>Anime 10</h3>
+                            <p>Deskripsi singkat anime 10.</p>
+                            <a href="anime10.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="anime-item">
+                            <img src="anime11.jpg" alt="Anime 11">
+                            <h3>Anime 11</h3>
+                            <p>Deskripsi singkat anime 11.</p>
+                            <a href="anime11.html" class="btn">Tonton Sekarang</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
