--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
                 },
             }
         });
+    document.addEventListener("DOMContentLoaded", function() {
+        document.body.style.overflowX = "hidden";
+    });
     </script>
 </body>
 </html>
